--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,8 +14,23 @@
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+main {
+  @apply min-h-[100dvh] w-[100dvw] bg-gray-100 pt-16;
+}
+
+h2 {
+  @apply mb-4 font-bold text-black;
+}
+
+@layer components {
+  .position-center {
+    @apply absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 transform;
+  }
+  .accessibility-hidden {
+    @apply absolute -m-[1px] h-[1px] w-[1px] overflow-hidden;
+  }
+
+  .skeleton-basic {
+    @apply rounded-md bg-gray-200;
+  }
 }
