--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  @apply bg-gray-100;
+}
 main {
-  @apply min-h-[100dvh] w-[100dvw] bg-gray-100 pt-16;
+  @apply h-full min-h-[100dvh] w-full min-w-[100dvw] pt-16;
 }
 
 h2 {
