update - 상세 페이지 Loading 처리 - 404 error 페이지 추가 - client btn text 추가 - error 페이지 추가 - wait 유틸 함수 추가

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  @apply h-full min-h-[100dvh] w-full min-w-[100dvw] bg-gray-100;
+  @apply h-full min-h-[100dvh] w-[100dvw] min-w-[1680px] bg-gray-100;
 }
 main {
   @apply w-[calc(100%-240px)] pt-20;
